Resolves: tdf#85551 OFFSET() NewWidth and NewHeight must be >0 if given

This also makes it necessary to adjust a test that reused the bug
document for a different scenario but checked the result.

Change-Id: I80136747445d5029aa5c894270448f002c567e3c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97553
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit f31d8d61859bb375c99419ff176adca27a9197b6)